assets/css/portfolio.css
.grid-images {
  background-color: white;
  padding: 2% 5%;
}

.grid-images img {
  width: 100%;
  position: relative;
}

.image-text {
  position: relative;
  display: flex;
  justify-content: center;
  color: white;
  margin-top: -25%;
  margin-bottom: 50px;
  padding: 5px 0;
  background-color: #4aaaa5;
  font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
}

.image-row {
  margin-bottom: 20px;
}

